[package]
name = "fano"
version = "0.1.0"
authors = ["jialanxin <jia-lanxin@foxmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "fano"
crate-type = ["cdylib"]

[dependencies]
rand = "0.7"
rayon = "1.3.0"

[dependencies.pyo3]
version = "0.9.1"
features = ["extension-module"]

[profile.release]
lto = "fat"
codegen-units = 1
