[package]
name = "differential_evolution"
version = "0.1.0"
authors = ["jialanxin <jialanxin1996@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
rayon = "1.3.0"

[profile.release]
lto = "fat"
codegen-units = 1