[package]
name = "differential_evolution"
version = "0.1.0"
authors = ["jialanxin <jialanxin1996@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "differential_evolution"
crate-type = ["cdylib"]

[dependencies]
rand = "0.7.3"
rayon = "1.3.0"

[dependencies.pyo3]
version = "0.24.1"
features = ["extension-module"]

[profile.release]
lto = "fat"
codegen-units = 1